--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.0",
     "sass": "^1.69.5",
     "styled-components": "^6.1.1"
