--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.5",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.3",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.0",
     "sass": "^1.69.5",
     "styled-components": "^6.1.1",
